# Chimera

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Chimera.cpp  LICENSE.txt  README.md  chimera.py  pyproject.toml  setup.py  test.cpp
libs/: toolbox.cpp  toolbox.hpp
libs/klib/: khashl.h  kseq.h  ksw.c
libs/seqan3/include/seqan3/search/dream_index/: interleaved_bloom_filter.hpp
libs/seqan3/include/seqan3/search/views/: minimiser_hash.hpp
libs/seqan3/include/seqan3/submodules/cereal/include/cereal/: access.hpp
libs/seqan3/include/seqan3/submodules/cereal/include/cereal/archives/: binary.hpp
libs/seqan3/include/seqan3/submodules/sdsl-lite/include/sdsl/: int_vector.hpp  int_vector_buffer.hpp  memory_management.hpp  memory_tracking.hpp  qsufsort.hpp  rrr_vector.hpp  select_support_mcl.hpp  structure_tree.hpp  version.hpp  wt_helper.hpp
libs/seqan3/share/cmake/: cerealConfig.cmake
libs/seqan3/share/cmake/seqan3/: seqan3-config-version.cmake
libs/strobemers/: chimera_syncmer.hpp  exceptions.hpp  indexparameters.hpp  randstrobes.cpp  randstrobes.hpp
src/: Chimera.h  config.hpp
src/ani/: AniSketch.cpp  AniSketch.hpp
src/classify/: ChimeraClassify.cpp  ChimeraClassify.hpp  ChimeraClassifyAutoPolicy.cpp  ChimeraClassifyAutoPolicy.hpp  ChimeraClassifyCommon.hpp  ChimeraClassifyFeatures.cpp  ChimeraClassifyIO.cpp  ChimeraClassifyIndex.cpp  ChimeraClassifyPresence.cpp  ChimeraClassifyProcess.cpp  ChimeraClassifyReadout.cpp  ChimeraClassifyReadout.hpp  ChimeraLpcClassify.cpp  ChimeraLpcClassify.hpp  classifyConfig.hpp  counting_filter.h  post_em_debug_dump.hpp  post_em_prune_audit.hpp  preem_topk.hpp
src/download/: download.py  main.py
src/download/_internal/: libffi.so.8.1.2  libgcc_s.so.1  liblzma.so.5.4.6  libpython3.8.so.1.0  libssl.so.3  libstdc++.so.6.0.33  libz.so.1.2.13
src/profile/: conversion2Krona.py  profile.py  read_evidence.py  taxonomy_utils.py
src/utils/: CountMinSketch.cpp  CountMinSketch.hpp  EM.hpp  FeatureHasher.cpp  FeatureHasher.hpp  HyperLogLog.hpp  LCA.hpp  LocalResolutionManifest.cpp  LocalResolutionManifest.hpp  LocalResolutionMetadata.cpp  LocalResolutionMetadata.hpp  NativeBoundedIndex.cpp  NativeBoundedIndex.hpp  Parse.hpp  PresenceModel.hpp  Strobemer.hpp  Syncmer.hpp  VEM.hpp  dna4_traits.hpp  syncmer_hash.hpp  syncmer_view.hpp
tests/bench/: test_eval_abundance_desc.py  test_eval_classify_desc.py  test_report_dataset_desc.py  test_score_run_desc.py
tests/imcf/: interleaved_merged_cuckoo_filter_test.cpp
tests/profile/: test_chimera_profile_cli.py  test_intragenus_map_logging.py  test_profile_low_diversity.py  test_profile_prefilter_denom.py
tests/utils/: auto_post_pi_min_curve_test.cpp  classify_io_test.cpp  df_bins_effective_test.cpp  df_idf_bonus_split_test.cpp  idf_clamp_test.cpp  local_contrast_xor_gate_test.cpp  local_contrast_zero_sum_test.cpp  low_diversity_auto_test.cpp  post_em_debug_dump_test.cpp  post_em_fallback_test.cpp  post_em_prune_audit_test.cpp  post_em_reject_override_test.cpp  preem_topk_test.cpp  stopword_tail_factor_test.cpp  syncmer_test.cpp  tf_saturation_test.cpp  unique_edge_guard_test.cpp
